fix: database connection test fix
