# swagger/swagger_output.json
@@ -28,13 +28,47 @@
     "/api/": {
       "get": {
         "tags": [
-          "Detalhes da API"
+          "Conexões"
         ],
         "summary": "Rota default que retorna a versão da API",
         "description": "Endpoint que retorna a versão da API",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/mongodb/testar-conexao": {
+      "get": {
+        "tags": [
+          "Conexões"
+        ],
+        "summary": "Rota que testa a conexão com o MongoDB",
+        "description": "Endpoint que retorna a conexão com o MongoDB",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
+          }
+        }
+      }
+    },
+    "/mysql/testar-conexao": {
+      "get": {
+        "tags": [
+          "Conexões"
+        ],
+        "summary": "Rota que testa a conexão com o RDS MySQL",
+        "description": "Endpoint que retorna a conexão com o MySQL",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
           }
         }
       }
